...
                          snapshot.data?.data() as Map<String, dynamic>)
                      .copyWith(id: snapshot.data!.id);
                }
              }

              return SingleChildScrollView(
                key: Key("descriptionScreenScrollable"),
                child: Padding(
                  padding: const EdgeInsets.all(AppDimensions.defaultPadding),
                  child: Column(
                    children: [
                      DescriptionTitleWidget(media: media),
                      InformationWidget(media: media),
...
