...
  }

  void _handleExceptions(AuthState state) {
    if (state is AuthStateLoggedOut) {
      if (state.exception is InvalidEmailAuthException) {
        setState(() {
          _error = "Invalid email";
        });
      } else if (state.exception is UserNotFoundAuthException) {
        setState(() {
          _error = "There is no user with this email";
        });
      } else if (state.exception is GenericAuthException) {
        setState(() {
          _error = "Something went wrong";
        });
      } else {
...
