...
                  color: AppColors.primaryTextColor,
                ),
                textAlign: TextAlign.center,
              ),
            ),
            const Text(
              "Please check your inbox!",
              style: TextStyle(
                fontSize: 13,
                fontWeight: FontWeight.w500,
                color: AppColors.primaryTextColor,
              ),
            ),
...
